# gptvm

./: CMakeLists.txt  LICENSE  README-zh.md  README.md  gptvm.cmake
examples/: CMakeLists.txt  README.md  resource.cc  task.py  tensorrt.cc
examples/fill-mask/: .gitignore  README.md  convert-onnx.sh  pipeline.py  requirements-onnx.txt  requirements.txt  test.py
include/gptvm/backend/: backend.h  cpu.h  device.h  gpu.h
include/gptvm/compiler/: frontend.h
include/gptvm/compiler/dialect/: CMakeLists.txt
include/gptvm/compiler/dialect/actor/ir/: CMakeLists.txt  actor_op_base.td  actor_ops.h  actor_ops.td
include/gptvm/compiler/dialect/actor/transforms/: CMakeLists.txt  passes.h  passes.td
include/gptvm/compiler/dialect/domain/ir/: CMakeLists.txt  domain_op_base.td  domain_ops.h  domain_ops.td
include/gptvm/compiler/dialect/domain/transforms/: CMakeLists.txt  axis_map.h  onnx_op_info.h  passes.h  passes.td
include/gptvm/python/: gptvm.h  torch_opt.h  utils.h
include/gptvm/runtime/: backend_wrapper.h  buffer.h  comm.h  device.h  model.h  resource.h
python/gptvm/: __init__.py  injector.py  log.py
python/gptvm/core/: __init__.py  backend.py  buffer.py  device.py  object.py  resource.py  task.py
python/gptvm/optimize/: utils.py
python/gptvm/optimize/torch/: compiler.py
python/gptvm/optimize/trt_llm/: __init__.py  bert.py  llama.py  llama_weight.py
python/gptvm/optimize/vllm/: llama.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  onnxrt.cc  tensorrt.cc  tensorrt.h
src/compiler/: CMakeLists.txt
src/compiler/dialect/: CMakeLists.txt
src/compiler/dialect/actor/ir/: CMakeLists.txt  actor_ops.cc
src/compiler/dialect/actor/transforms/: CMakeLists.txt  convert_domain_to_actor.cc
src/compiler/dialect/domain/ir/: CMakeLists.txt  domain_ops.cc
src/compiler/dialect/domain/transforms/: CMakeLists.txt  domain_init.cc  passes.cc  tensor_parallel_group_search.cc
src/compiler/lib/frontend/: CMakeLists.txt  onnx.cc
src/compiler/tools/: CMakeLists.txt  gptvm-onnx.cc  gptvm-opt.cc
src/config/: CMakeLists.txt  nv_spec.json
src/python/: CMakeLists.txt  eval_frame.cc  gptvm.cc  py_opcode.h  torch_opt.cc  utils.cc
src/runtime/: CMakeLists.txt  gv_backend_wrapper.cc  gv_resource.cc
tests/: README.md  conftest.py  requirements.txt  test_build.py
tests/compiler/domain/: form_domain_region.mlir  split_tensor_parallel.mlir
tests/model/: test_bert.py  test_mnist.py
tests/python/: test_injector.py
tests/runtime/: test_resource.py
tests/utils/: lazy_import.py  model_util.py
