function(add_gptvm_compiler_dialect dialect target_prefix)
  set(LLVM_TARGET_DEFINITIONS ${dialect}_ops.td)
  mlir_tablegen(${dialect}_ops.h.inc -gen-op-decls)
  mlir_tablegen(${dialect}_ops.cc.inc -gen-op-defs)
  mlir_tablegen(${dialect}_types.h.inc -gen-typedef-decls -typedefs-dialect=${dialect})
  mlir_tablegen(${dialect}_types.cc.inc -gen-typedef-defs -typedefs-dialect=${dialect})
  mlir_tablegen(${dialect}_dialect.h.inc -gen-dialect-decls -dialect=${dialect})
  mlir_tablegen(${dialect}_dialect.cc.inc -gen-dialect-defs -dialect=${dialect})
  add_public_tablegen_target(${target_prefix}IncGen)
  add_dependencies(mlir-headers ${target_prefix}IncGen)
endfunction()

function(add_gptvm_compiler_dialect_transforms target_prefix)
  set(LLVM_TARGET_DEFINITIONS passes.td)
  mlir_tablegen(passes.h.inc -gen-pass-decls)
  add_public_tablegen_target(${target_prefix}PassesGen)
  add_dependencies(mlir-headers ${target_prefix}PassesGen)
endfunction()

add_subdirectory(actor)
add_subdirectory(domain)
